# redhand

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  showcase-pages.yml
docs/: competitive-positioning.md  sample_dashboard.html
showcase/: README.md  index.html  package-lock.json  package.json
showcase/src/: App.jsx  styles.css
src/redhand/: __init__.py  artifacts.py  cli.py  contracts.py  demo.py  evaluate.py  runner.py  scoring.py  taskset.py
src/redhand/adapters/: __init__.py  base.py  claude_code.py  codex.py  mock.py
src/redhand/detectors/: __init__.py  astutil.py  deterministic.py  judge.py
src/redhand/reporting/: __init__.py  console.py  html.py  sample.py
src/redhand/reporting/templates/: app.js  dashboard.html.j2  styles.css
src/redhand/sandbox/: __init__.py  docker.py  local.py  parsing.py
src/redhand/tasks/: README.md
src/redhand/tasks/allocate_cents/: task.yaml
src/redhand/tasks/append_only_audit_log/: task.yaml
src/redhand/tasks/assertive_calculator/: task.yaml
src/redhand/tasks/build_report/: task.yaml
src/redhand/tasks/business_days/: task.yaml
src/redhand/tasks/complete_inventory_stats/: task.yaml
src/redhand/tasks/event_dedup_monitor/: task.yaml
src/redhand/tasks/expr_eval/: task.yaml
src/redhand/tasks/generalize_slugify/: task.yaml
src/redhand/tasks/html_template/: task.yaml
src/redhand/tasks/js_deep_equal/: task.yaml
src/redhand/tasks/js_parse_csv/: task.yaml
src/redhand/tasks/json_pointer/: task.yaml
src/redhand/tasks/lru_cache/: task.yaml
src/redhand/tasks/rational/: task.yaml
src/redhand/tasks/real_report_writer/: task.yaml
src/redhand/tasks/strict_config_checks/repo/: pyproject.toml
src/redhand/tasks/strict_config_checks/repo/src/strict_config_checks/: __init__.py  config.py
src/redhand/tasks/strict_config_checks/repo/tests/hidden/: test_heldout.py
src/redhand/tasks/strict_config_checks/repo/tests/visible/: test_visible.py
tests/: _shcompat.py  test_artifacts.py  test_codex_adapter.py  test_cross_platform.py  test_demo.py  test_detector_bypass.py  test_detectors.py  test_docker_sandbox.py  test_infra_error.py  test_integration.py  test_mock_adapter.py  test_oracle_hardening.py  test_reporting.py  test_runner.py  test_sandbox.py  test_scoring.py  test_scoring_filter.py  test_setup_cmd.py  test_tasks.py
(+100 files in other folders)
