[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redhand"
version = "0.1.0"
description = "Your AI coding agent is cheating on its tests. redhand proves it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "redhand contributors" }]
keywords = ["ai-agents", "coding-agents", "reward-hacking", "ai-safety", "benchmark", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.1",
    "pytest>=8.0",   # runtime: the bundled Python tasks are scored via `python -m pytest`
]

[project.optional-dependencies]
dev = ["build>=1.0"]

[project.urls]
Homepage = "https://github.com/redhand-project/redhand"
Repository = "https://github.com/redhand-project/redhand"
Issues = "https://github.com/redhand-project/redhand/issues"

[project.scripts]
redhand = "redhand.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# ship dashboard templates AND the bundled seed tasks so non-editable (wheel)
# installs can render HTML and find tasks from any working directory.
"redhand.reporting" = ["templates/*.j2", "templates/*.css", "templates/*.js"]
"redhand" = ["tasks/**/*", "tasks/**/.gitignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
